@@ -562,7 +562,7 @@ fi
 
 tweek_extra_ldflags="$EXTRA_LDFLAGS $OMNI_LDFLAGS"
 
-jars='TweekBeans.jar TweekNet.jar TweekServices.jar'
+jars='TweekBeans.jar TweekEvents.jar TweekNet.jar TweekServices.jar'
 
 changequote(<<, >>)
 tweek_java_api_jars=`echo "$jars" | sed -e 's/\(Tweek[A-Za-z]*\.jar\)/${prefix}\/bin\/\1/g' -e "s/ /$JCPS/g"`
